Add playwright e2e tests
- define playwright tests in e2e folder
- remove protractor
- add e2e/compose folder that contains docker-compose.yaml [0]
- add e2e/wiremock folder that contains wiremock stubs

[0] The compose file contains keycloak and a keycloak-config-cli to import
    an onap realm with the portal-app client.
    It will also spin up the wiremock that is defined in e2e/wiremock

Issue-ID: PORTALNG-159
Change-Id: I5f85fb29ec4840ba053fc3a4b2a6828e1f8572f0
Signed-off-by: Fiete Ostkamp <fiete.ostkamp@telekom.de>

--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "openapi": "npx openapi-generator-cli generate --generator-key v3.0",
     "ng": "./node-modules/.bin/ng",
     "prestart": "npm run openapi",
-    "start": "ng serve --proxy-config staging.proxy.config.json --host 0.0.0.0 --port 80 --disable-host-check",
+    "start": "ng serve --host 0.0.0.0 --port 4200 --disable-host-check --proxy-config staging.proxy.config.json",
+    "start:e2e": "ng serve --host 0.0.0.0 --port 4200 --disable-host-check --proxy-config e2e.proxy.config.json",
     "prebuild": "npm run openapi",
     "build": "ng build",
     "pretest": "npm run openapi",
@@ -13,7 +14,9 @@
     "prelint": "npm run openapi",
     "lint": "ng lint",
     "pree2e": "npm run openapi",
-    "e2e": "ng e2e",
+    "e2e": "npx playwright test --project=firefox",
+    "e2e:trace": "npx playwright test --project=firefox --trace on",
+    "e2e:ui": "npx playwright test --project=firefox --ui",
     "compodoc": "compodoc -p tsconfig.json",
     "compodoc-4200": "compodoc -p tsconfig.json -s -r 4200",
     "sonar": "sonar-scanner",
@@ -53,6 +56,7 @@
     "@angular/cli": "17.3.11",
     "@angular/compiler-cli": "17.3.12",
     "@openapitools/openapi-generator-cli": "^2.6.0",
+    "@playwright/test": "^1.56.1",
     "@types/jasmine": "~3.6.0",
     "@types/jasminewd2": "2.0.3",
     "@types/lodash": "4.14.188",
