--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -1,7 +1,4 @@
----
-name: Gerrit Merge
-
-# yamllint disable-line rule:truthy
+name: E2E Tests
 on:
   workflow_dispatch:
     inputs:
@@ -41,19 +38,13 @@ on:
         description: "Gerrit refspec of change"
         required: true
         type: string
-
-concurrency:
-  # yamllint disable-line rule:line-length
-  group: gerrit-merge-${{ github.workflow }}-${{ github.event.inputs.GERRIT_CHANGE_ID || github.run_id }}
-  cancel-in-progress: true
-
 jobs:
-  notify:
+  prepare:
     runs-on: ubuntu-latest
     steps:
-      - name: Notify job start
+      - name: Clear votes
         # yamllint disable-line rule:line-length
-        uses: lfreleng-actions/gerrit-review-action@4fd2a475c14c1249cba0054580eda415dccd628a # v0.8
+        uses: lfreleng-actions/gerrit-review-action@037e678180f38cb0c5368cbc2620bc9c44a876e1  # v0.9
         with:
           host: ${{ vars.GERRIT_SERVER }}
           username: ${{ vars.GERRIT_SSH_USER }}
@@ -62,26 +53,44 @@ jobs:
           gerrit-change-number: ${{ inputs.GERRIT_CHANGE_NUMBER }}
           gerrit-patchset-number: ${{ inputs.GERRIT_PATCHSET_NUMBER }}
           vote-type: clear
+          comment-only: true
       - name: Allow replication
         run: sleep 10s
-
-  call-sonatype-lifecycle:
-    needs: [notify]
-    # yamllint disable-line rule:line-length
-    uses: lfit/releng-reusable-workflows/.github/workflows/reuse-sonatype-lifecycle.yaml@7732e2793c9bd6e53304f94e9bd2ad04fb7f4718 # 2024-10-22
-    secrets:
-      NEXUS_IQ_PASSWORD: ${{ secrets.NEXUS_IQ_PASSWORD }}
-
-  report-status:
-    if: ${{ always() }}
-    needs: [notify, call-sonatype-lifecycle]
+  test:
+    needs: prepare
+    timeout-minutes: 60
     runs-on: ubuntu-latest
     steps:
-      - name: Get workflow conclusion
-        uses: technote-space/workflow-conclusion-action@69935d3f28b21a2e7ad513e43493795cc7224dcc # v3.0.3
-      - name: Report workflow conclusion
+      - name: Checkout code
+        uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8  # v5.0.0
+      - name: Setup Node.js
+        uses: actions/setup-node@2028fbc5c25fe9cf00d9f06a71cc4710d4507903  # v6.0.0
+        with:
+          node-version: lts/*
+      - name: Install dependencies
+        run: npm ci
+      - name: Install Playwright Browsers
+        run: npx playwright install --with-deps
+      - name: Run Playwright tests
+        run: npx playwright test
+      - name: Upload test results
+        uses: actions/upload-artifact@330a01c490aca151604b8cf639adc76d48f6c5d4  # v5.0.0
+        if: ${{ !cancelled() }}
+        with:
+          name: playwright-report
+          path: playwright-report/
+          retention-days: 30
+  vote:
+    if: ${{ always() }}
+    needs: [prepare, test]
+    runs-on: ubuntu-latest
+    steps:
+      - name: Get conclusion
         # yamllint disable-line rule:line-length
-        uses: lfreleng-actions/gerrit-review-action@4fd2a475c14c1249cba0054580eda415dccd628a # v0.8
+        uses: technote-space/workflow-conclusion-action@45ce8e0eb155657ab8ccf346ade734257fd196a5  # v3.0.3
+      - name: Set vote
+        # yamllint disable-line rule:line-length
+        uses: lfreleng-actions/gerrit-review-action@037e678180f38cb0c5368cbc2620bc9c44a876e1  # v0.9
         with:
           host: ${{ vars.GERRIT_SERVER }}
           username: ${{ vars.GERRIT_SSH_USER }}
@@ -90,3 +99,4 @@ jobs:
           gerrit-change-number: ${{ inputs.GERRIT_CHANGE_NUMBER }}
           gerrit-patchset-number: ${{ inputs.GERRIT_PATCHSET_NUMBER }}
           vote-type: ${{ env.WORKFLOW_CONCLUSION }}
+          comment-only: true
