Add tests for user creation
- test user creation
- user creation is not fully working yet, as
  available roles are not shown
- adjust compose setup to restart wiremock each time
  npm run start:e2e is invoked

Issue-ID: PORTALNG-161
Change-Id: I6f61e0c5fc267a496193e0faae574da35460bfbc
Signed-off-by: Fiete Ostkamp <fiete.ostkamp@telekom.de>

--- a/e2e/compose/docker-compose.yml
+++ b/e2e/compose/docker-compose.yml
@@ -29,7 +29,7 @@ services:
       - KEYCLOAK_URL=http://keycloak:9080
       - KEYCLOAK_USER=admin
       - KEYCLOAK_PASSWORD=password
-    restart: unless-stopped
+    restart: on-failure:200
     networks:
       keycloak: {}
       keycloak-config-cli: {}
