--- a/.github/workflows/gerrit-verify-e2e-tests.yml
+++ b/.github/workflows/gerrit-verify-e2e-tests.yml
@@ -42,6 +42,7 @@ jobs:
   prepare:
     runs-on: ubuntu-latest
     steps:
+      - uses: lfit/checkout-gerrit-change-action@54d751e8bd167bc91f7d665dabe33fae87aaaa63 # v0.9
       - name: Clear votes
         # yamllint disable-line rule:line-length
         uses: lfreleng-actions/gerrit-review-action@037e678180f38cb0c5368cbc2620bc9c44a876e1  # v0.9
