--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "lodash": "4.17.21",
     "rxjs": "~7.4.0",
     "tslib": "2.3.0",
+    "uuid": "^13.0.0",
     "zone.js": "0.14.3"
   },
   "devDependencies": {
@@ -60,7 +61,6 @@
     "@types/jasminewd2": "2.0.3",
     "@types/lodash": "4.14.188",
     "@types/node": "18.0.0",
-    "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "^5.59.2",
     "@typescript-eslint/parser": "^5.59.2",
     "eslint": "^8.39.0",
