--- a/.github/workflows/gerrit-verify-e2e-tests.yml
+++ b/.github/workflows/gerrit-verify-e2e-tests.yml
@@ -83,7 +83,7 @@ jobs:
       - name: Install Playwright Browsers
         run: npx playwright install --with-deps
       - name: Run Playwright tests
-        run: npx playwright test --project=firefox --trace
+        run: npx playwright test --project=firefox --trace on
       - name: Upload test results
         uses: actions/upload-artifact@330a01c490aca151604b8cf639adc76d48f6c5d4  # v5.0.0
         if: ${{ !cancelled() }}
