Add app-starter tests
- add playwright tests for app-starter
- fix keycloak auth in local development
- fetch DashboardComponent eagerly since it is
  the landing page
- clean up scripts section in package.json and don't run
  npm run openapi before npm run e2e

Issue-ID: PORTALNG-164
Change-Id: Id3eb09b9f1f5ff8b1e3953b96e268daa7bc287fd
Signed-off-by: Fiete Ostkamp <fiete.ostkamp@telekom.de>

--- a/e2e/compose/kcc-config/onap-realm.yaml
+++ b/e2e/compose/kcc-config/onap-realm.yaml
@@ -1,5 +1,10 @@
 realm: ONAP
 enabled: true
+attributes:
+  # configures the hostname that is used in the
+  # /realms/tnap/.well-known/openid-configuration
+  # endpoint
+  frontendUrl: "http://localhost:4200"
 clients:
   - clientId: portal-app
     redirectUris:
