--- a/package.json
+++ b/package.json
@@ -11,13 +11,11 @@
     "prebuild": "npm run openapi",
     "build": "ng build",
     "pretest": "npm run openapi",
-    "test": "npm run e2e:trace",
+    "test": "npm run e2e",
     "prelint": "npm run openapi",
     "lint": "ng lint",
-    "pree2e": "npm run openapi",
     "e2e": "npx playwright test --project=firefox",
-    "e2e:trace": "npx playwright test --project=firefox --trace on",
-    "e2e:ui": "npx playwright test --project=firefox --ui",
+    "e2e:ui": "npm run e2e --ui",
     "sonar": "sonar-scanner",
     "licences": "license-report --output=html > ./portal_ui_licences.html --config ./license-report-config.json"
   },
