--- a/.github/workflows/github2gerrit.yaml
+++ b/.github/workflows/github2gerrit.yaml
@@ -1,33 +1,83 @@
 ---
 # SPDX-License-Identifier: Apache-2.0
-# Copyright 2024 The Linux Foundation <abelur@linux.com>
+# SPDX-FileCopyrightText: 2025 The Linux Foundation
 
-name: call-github2gerrit-reusable-workflow
+name: 'GitHub2Gerrit'
 
 # yamllint disable-line rule:truthy
 on:
-    workflow_dispatch:
-    pull_request_target:
-        types: [opened, reopened, edited, synchronize]
-        branches:
-            - master
-            - main
+  # Handle pull requests - submit to Gerrit
+  pull_request_target:
+    types: [opened, reopened, edited, synchronize, closed]
+    branches:
+      - main
+      - master
+
+  # Handle pushes from Gerrit - close corresponding GitHub PRs
+  push:
+    branches:
+      - main
+      - master
 
 concurrency:
-    # yamllint disable-line rule:line-length
-    group: ${{ github.workflow }}-${{ github.run_id }}
-    cancel-in-progress: true
+  # Separate concurrency groups for different event types to prevent interference:
+  # - PR events: Group by PR number, allow cancellation of older commits
+  # - Push events: Group by run_id (unique), never cancel
+  # - Workflow dispatch: Group by run_id (unique), never cancel
+  group: >-
+    ${{
+      github.event_name == 'pull_request_target' && format('{0}-pr-{1}', github.workflow, github.event.pull_request.number) ||
+      format('{0}-{1}-{2}', github.workflow, github.event_name, github.run_id)
+    }}
+  # Only cancel in-progress runs for PR events (newer commit supersedes older)
+  # Never cancel push events (each Gerrit merge should process independently)
+  cancel-in-progress: ${{ github.event_name == 'pull_request_target' }}
 
 jobs:
-    call-in-g2g-workflow:
-        permissions:
-            contents: read
-            pull-requests: write
-        uses: lfit/github2gerrit/.github/workflows/github2gerrit.yaml@main
+  github2gerrit:
+    name: 'GitHub2Gerrit'
+    runs-on: ubuntu-latest
+    # Run on:
+    # - PR events (except closed without merge)
+    # - Push events (when Gerrit syncs back)
+    # - Manual workflow dispatch
+    if: |
+      (github.event_name == 'pull_request_target' && (github.event.action != 'closed' || github.event.pull_request.merged == true)) ||
+      github.event_name == 'push' ||
+      github.event_name == 'workflow_dispatch'
+    permissions:
+      contents: read
+      pull-requests: write
+      issues: write
+    timeout-minutes: 12
+    steps:
+      # Harden the runner used by this workflow
+      # yamllint disable-line rule:line-length
+      - uses: step-security/harden-runner@95d9a5deda9de15063e7595e9719c11c38c90ae2 # v2.13.2
+        name: 'Harden runner'
         with:
-            GERRIT_KNOWN_HOSTS: ${{ vars.GERRIT_KNOWN_HOSTS }}
-            GERRIT_SSH_USER_G2G: ${{ vars.GERRIT_SSH_USER_G2G }}
-            GERRIT_SSH_USER_G2G_EMAIL: ${{ vars.GERRIT_SSH_USER_G2G_EMAIL }}
-            ORGANIZATION: ${{ vars.ORGANIZATION }}
-        secrets:
-            GERRIT_SSH_PRIVKEY_G2G: ${{ secrets.GERRIT_SSH_PRIVKEY_G2G }}
+          egress-policy: audit
+
+      - name: 'Checkout repository'
+        # yamllint disable-line rule:line-length
+        uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8  # v5.0.0
+        with:
+          fetch-depth: 10
+          ref: ${{ github.event.pull_request.head.sha || github.sha }}
+
+      - name: 'Run GitHub2Gerrit'
+        # yamllint disable-line rule:line-length
+        uses: lfreleng-actions/github2gerrit-action@406fc75fc67140e460782458e75d6dc6cd134a6b  # v0.1.23
+        with:
+          USE_LOCAL_ACTION: true  # Use branch code for testing, not PyPI
+          USE_PR_AS_COMMIT: true
+          VERBOSE: true
+
+          # Workflow-specific inputs (only used for pull_request_target/workflow_dispatch)
+          ALLOW_DUPLICATES: ${{ github.event_name == 'workflow_dispatch' && inputs.allow_duplicates || false }}
+          PRESERVE_GITHUB_PRS: ${{ github.event_name == 'workflow_dispatch' && inputs.preserve_github_prs || false }}
+          ISSUE_ID_LOOKUP_JSON: ${{ vars.ISSUE_ID_LOOKUP_JSON }}
+
+          # Authentication (required for all contexts)
+          GERRIT_SSH_PRIVKEY_G2G: ${{ secrets.GERRIT_SSH_PRIVKEY_G2G }}
+          GERRIT_KNOWN_HOSTS: ${{ vars.GERRIT_KNOWN_HOSTS }}
