CI: Update all workflow action calls/locations needing updates
Replace archived workflow-conclusion action with supported version.
Some actions were relocated from lfit to lfreleng-actions GitHub ORG.
Pin all action calls to commit SHA values and update to latest releases.

Issue-ID: CIMAN-33
Change-Id: If05da161ae9d6242b1b91ede517f37c890511b6b
Signed-off-by: Matthew Watkins <mwatkins@linuxfoundation.org>

--- a/.github/workflows/gerrit-merge.yaml
+++ b/.github/workflows/gerrit-merge.yaml
@@ -53,7 +53,7 @@ jobs:
     steps:
       - name: Notify job start
         # yamllint disable-line rule:line-length
-        uses: lfreleng-actions/gerrit-review-action@4fd2a475c14c1249cba0054580eda415dccd628a # v0.8
+        uses: lfreleng-actions/gerrit-review-action@537251ec667665b386f70b330b05446e3fc29087 # v0.9
         with:
           host: ${{ vars.GERRIT_SERVER }}
           username: ${{ vars.GERRIT_SSH_USER }}
@@ -68,7 +68,7 @@ jobs:
   call-sonatype-lifecycle:
     needs: [notify]
     # yamllint disable-line rule:line-length
-    uses: lfit/releng-reusable-workflows/.github/workflows/reuse-sonatype-lifecycle.yaml@7732e2793c9bd6e53304f94e9bd2ad04fb7f4718 # 2024-10-22
+    uses: lfit/releng-reusable-workflows/.github/workflows/reuse-sonatype-lifecycle.yaml@21dee35da5cf13331dad63a2c81ae5bb6d023f95 # v0.2.25
     secrets:
       NEXUS_IQ_PASSWORD: ${{ secrets.NEXUS_IQ_PASSWORD }}
 
@@ -78,10 +78,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Get workflow conclusion
-        uses: technote-space/workflow-conclusion-action@69935d3f28b21a2e7ad513e43493795cc7224dcc # v3.0.3
+        uses: im-open/workflow-conclusion@e4f7c4980600fbe0818173e30931d3550801b992 # v2.2.3
       - name: Report workflow conclusion
         # yamllint disable-line rule:line-length
-        uses: lfreleng-actions/gerrit-review-action@4fd2a475c14c1249cba0054580eda415dccd628a # v0.8
+        uses: lfreleng-actions/gerrit-review-action@537251ec667665b386f70b330b05446e3fc29087 # v0.9
         with:
           host: ${{ vars.GERRIT_SERVER }}
           username: ${{ vars.GERRIT_SSH_USER }}
